<resources>
    <string name="app_name">Genpass</string>
    <string name="gen_passwd">Generate</string>
    <string name="copy_passwd">Copy password</string>
    <string name="length">LENGTH: </string>
    <string name="include_uppercase">Include Uppercase</string>
    <string name="include_numbers">Include Numbers</string>
    <string name="include_symbols">Include Symbols</string>
    <string name="password">Password</string>
</resources>