<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

    <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwdText"
            android:textSize="34sp"
            android:textColorHighlight="@color/primary"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/lengthBar"
            app:layout_constraintStart_toStartOf="@+id/lengthBar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintHorizontal_bias="0.495"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:password="false"
            android:singleLine="false"
            android:textIsSelectable="false"
            android:typeface="normal"
            android:breakStrategy="high_quality"
            android:editable="false" />

    <Button
        android:id="@+id/genPasswd"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/gen_passwd"
        app:cornerRadius="@dimen/radius"
        app:layout_constraintBottom_toTopOf="@+id/copyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986" />

    <Button
        android:id="@+id/copyButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/copy_passwd"
        app:cornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <com.google.android.material.slider.Slider
        android:id="@+id/lengthBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/length"
        android:max="50"
        android:maxHeight="23dp"
        android:minHeight="13dp"
        android:progress="16"
        android:stepSize="1"
        android:value="16"
        android:valueFrom="3"
        android:valueTo="50"
        app:layout_constraintBottom_toTopOf="@+id/lengthLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tickVisible="false"
        app:trackHeight="@dimen/track_height" />

    <TextView
            android:text="@string/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lengthLabel"
            android:textSize="14sp"
            android:textColor="@color/text_darker"
            app:layout_constraintStart_toStartOf="@+id/lengthBar"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/uppercaseSwitch"
            android:layout_marginBottom="24dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:text="@string/include_uppercase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/uppercaseSwitch"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/lengthBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="true"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toTopOf="@+id/symbolsSwitch"
            app:useMaterialThemeColors="false" />

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:text="@string/include_symbols"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/symbolsSwitch"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/lengthBar"
            app:layout_constraintStart_toStartOf="@+id/lengthBar"
            android:checked="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColorHighlight="@color/highlighted_text"
            app:layout_constraintBottom_toTopOf="@+id/numbersSwitch"
            app:useMaterialThemeColors="false" />

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:text="@string/include_numbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/numbersSwitch"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:checked="true"
            android:showText="false"
            android:splitTrack="false"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColorHighlight="@color/highlighted_text"
            app:layout_constraintBottom_toTopOf="@+id/genPasswd"
            android:layout_marginBottom="16dp"
            app:useMaterialThemeColors="false" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        android:progress="3"
        android:rating="4"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toTopOf="@+id/ratingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Great!"
        app:layout_constraintBottom_toTopOf="@+id/lengthBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>